force-app/main/default/objects/Account/fields/AccountCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>AccountCreatedDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Created Date Time</label>
    <type>DateTime</type>
</CustomField>