force-app/main/default/objects/Account/fields/CardNumber2__c.field-meta.xml
<CustomField>
    <fullName>CardNumber2__c</fullName>
    <label>CardNumber</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>