force-app/main/default/objects/Account/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>