force-app/main/default/objects/Account/fields/MaskedAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>MaskedAccountNumber__c</fullName>
    <label>Masked Account Number</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>