force-app/main/default/objects/Account/fields/MaskedCardNumber__c.field-meta.xml
<CustomField>
    <fullName>MaskedCardNumber__c</fullName>
    <label>Masked Card Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>